// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`features/classification/ClassificationProperty should render add classification correctly 1`] = `
<Fragment>
  <FormattedMessage
    defaultMessage="Classification"
    id="boxui.classification.classification"
    tagName="dt"
  />
  <dd>
    <PlainButton
      className="lnk"
      onClick={[Function]}
    >
      <FormattedMessage
        defaultMessage="Add Classification"
        id="boxui.classification.addClassification"
      />
    </PlainButton>
  </dd>
</Fragment>
`;

exports[`features/classification/ClassificationProperty should render edit classification correctly 1`] = `
<Fragment>
  <FormattedMessage
    defaultMessage="Classification"
    id="boxui.classification.classification"
    tagName="dt"
  />
  <dd>
    <div
      className="mbs"
    >
      <ClassificationBadge
        tooltipPosition="middle-left"
        value="Classified"
      />
    </div>
    <PlainButton
      className="lnk"
      onClick={[Function]}
    >
      <FormattedMessage
        defaultMessage="Edit"
        id="boxui.classification.edit"
      />
    </PlainButton>
  </dd>
</Fragment>
`;

exports[`features/classification/ClassificationProperty should render null when openModal and value are not specified 1`] = `""`;

exports[`features/classification/ClassificationProperty should render readonly classification correctly 1`] = `
<Fragment>
  <FormattedMessage
    defaultMessage="Classification"
    id="boxui.classification.classification"
    tagName="dt"
  />
  <dd>
    <div
      className="mbs"
    >
      <ClassificationBadge
        tooltip="Sensitive"
        tooltipPosition="middle-left"
        value="Classified"
      />
    </div>
  </dd>
</Fragment>
`;
